# unec-quiz-formatter

./: .gitignore  README.md  build_exe.ps1  launcher.py  package_share.ps1  pyproject.toml  quiz_formatter.spec
release/quiz_formatter_portable/: README.txt  Run Quiz.cmd  Run Web UI.cmd
src/quiz_formatter/: __init__.py  cli.py  extractor.py  history.py  models.py  parser.py  quiz.py  web.py
tasks/: lessons.md  todo.md
tests/: test_history.py  test_parser.py  test_quiz.py
